# podlake

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/podbucket/: convert.py
src/podlake/: cli.py  config.py  convert.py  oai.py  storage.py
tests/: conftest.py  test_convert.py  test_oai.py  test_resourcesync.py  test_storage.py
